[project]
name = "pxt-primetime"
version = "0.1.0"
description = "Build multimodal AI applications with Pixeltable"
requires-python = ">=3.10"
dependencies = [
    "pytube",
    "pixeltable>=0.5.6",
    "scenedetect",
    "opencv-python",
    "sentence-transformers",
    "ipykernel",
    "pip",
    "openai-whisper",
    "google-genai",
]

