[project]
name = "pxt-primetime"
version = "0.1.0"
description = "Build multimodal AI applications with Pixeltable"
requires-python = ">=3.10"
dependencies = [
    "pytube",
    "pixeltable==0.5.15",
    "scenedetect",
    "opencv-python",
    "sentence-transformers",
    "ipykernel",
    "ipywidgets",
    "pip",
    "openai-whisper",
    "google-genai",
    "spacy>=3.8.11",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

